return back structure, add utils, fix cors

--- a/www/src/static/notFound.html
+++ b/www/src/static/notFound.html
@@ -46,7 +46,7 @@
         width: 60%;
       }
       .main-title {
-        color: #ff751d;
+        color: #49409c;
         font-size: 3rem;
         font-style: normal;
         font-weight: 900;
